# cedica-private-docker

./: .gitignore  backup_deudores  backup_docker.sql  backup_pruebas  docker-2.txt  docker-compose.yml  output_backup.sql  package.json  pyproject.toml  tailwind.config.js
data/: postmaster.pid
data/base/1/: 2619
data/base/16384/: 2619
data/base/4/: 2619
data/global/: 1260  1262  2671  2676  pg_control
flask_app/: Dockerfile  README.md  package-lock.json  pyproject.toml  tailwind.config.js
flask_app/app/: app.py
flask_app/app/core/: config.py  contact.py  database.py  equestrian.py  health_insurance.py  minio.py  post.py  riders_and_horsewomen.py  team_member.py  utils.py
flask_app/app/web/: __init__.py  errors.py  oauth.py  routes.py  storage.py
flask_app/static/: error_style.css  output.css
init-db/: custom-config.sh  entrypoint.sh  init.sh  output.sql
minio-data/.minio.sys/: format.json
src/: app.py
src/core/: config.py  contact.py  database.py  equestrian.py  health_insurance.py  minio.py  post.py  riders_and_horsewomen.py  team_member.py  utils.py
src/core/auth/: __init__.py
src/core/collections/: __init__.py
src/core/models/: collection.py  contact.py  equestrian.py  health_insurance.py  payment.py  post.py  riders_and_horsewomen.py  team_member.py  users.py
src/core/payments/: __init__.py
src/core/users/: __init__.py
src/web/: __init__.py  errors.py  routes.py  storage.py
src/web/api/: contacts.py  posts.py
src/web/controllers/: auth.py  collections.py  contacts.py  equestrian.py  graphics.py  payments.py  posts.py  users.py  (+3 more)
(+100 files in other folders)
