[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["SANTIAGO FIERRO <santiago.fierro99@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
tailwindcss = "^0.0.1"
nodeenv = "^1.9.1"
minio = "^7.2.9"
wtforms = "^3.1.2"
email-validator = "^2.2.0"
flask-marshmallow = "^1.2.1"
authlib = "^1.3.2"
requests = "^2.32.3"
pyopenssl = "^24.2.1"
flask-cors = "^5.0.0"
plotly = "^5.24.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"